infra/k8s/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fchost-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - io.ottodev.com.br
      secretName: fchost-tls
  rules:
    - host: io.ottodev.com.br
      http:
        paths:
          - path: /fchost/api/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: fchost-api-service
                port:
                  number: 8080
